# 2026_TEAM8_BE

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test_auth.py  trithon api 명세서 - 시트1.csv
app/: app.py
app/core/: dependencies.py  verify_jwt.py
app/dependencies/: database.py  email.py  embed_skills.py
app/dependencies/ai/: config.py  todo_generator.py
app/models/: __init__.py  announcement_models.py  chat_models.py  matching_models.py  skill_models.py  todo_models.py  user_models.py
app/realtime/: channels.py  connection_manager.py  event_handler.py  event_subscriber.py  publisher.py
app/repositories/: announcement_repository.py  auth_repository.py  chat_repository.py  matching_repository.py  skill_repository.py  todo_repository.py  user_repository.py
app/routers/announcement/: announcement_router.py
app/routers/auth/: auth_router.py
app/routers/chat/: chat_router.py
app/routers/matching/: matching_router.py
app/routers/skill/: skill_router.py
app/routers/todo/: todo_router.py
app/routers/user/: user_router.py
app/schemas/: announcement_schema.py  auth_schema.py  chat_schema.py  matching_schema.py  skill_schema.py  todo_schema.py  user_schema.py
app/services/: ai_service.py  announcement_service.py  auth_service.py  chat_service.py  matching_service.py  skill_service.py  todo_service.py  user_service.py
app/templates/: email_verification_failed.html  email_verified.html
context/: openapi_spec.json  찐최종 명세서.csv
frontend/: Dockerfile  package-lock.json  package.json
nginx/: default.conf
(+20 files in other folders)
