[project]
name = "trithon-team8-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
